fix formatting on tablet

--- a/src/app/cart/checkout/checkout.component.css
+++ b/src/app/cart/checkout/checkout.component.css
@@ -5,6 +5,13 @@ body {
   align-items: center;
 }
 
+.page-container {
+   width: clamp(700px, 80%, 95%);
+   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .title {
   max-height: 75px;
 }
@@ -91,7 +98,7 @@ body {
   flex-direction: column;
   gap: 1rem;
   max-width: 600px;
-  min-width: 400px;
+  min-width: 350px;
   margin: auto;
 }
 
@@ -328,7 +335,7 @@ button:disabled {
 }
 
 
-@media (max-width: 815px) {
+@media (max-width: 750px) {
 
   .checkout-sides {
     flex-direction: column;
