--- a/src/app/home/homepage/hero/hero.component.css
+++ b/src/app/home/homepage/hero/hero.component.css
@@ -18,7 +18,7 @@
     height: 100%; 
     display: flex; 
     justify-content: right;
-    align-items: center; 
+    align-items: center;
 }
 
 .hero-image {
@@ -90,7 +90,7 @@ h1 {
     }
 
     .hero-container {
-        gap: 1rem;
+        gap: 2rem;
     }
 
     body {
@@ -103,8 +103,12 @@ h1 {
     }
     
     .image-side {
-        width: 80%;
+        width: 60%;
         justify-content: center;
+    }
+
+    .hero-image {
+        width: 350px;
     }
 
     .flower-image {
@@ -113,6 +117,13 @@ h1 {
 
 } 
 
+@media (max-width: 770px) {
+
+    .hero-image {
+        width: 300px;
+    }
+
+}
 
 @media (max-width: 700px) {
     .hero-container {
@@ -144,7 +155,12 @@ h1 {
         padding: 20px;
     }
 
+    .hero-image {
+        width: 90%;
+        max-width: 450px;
+    }
 }
+
 
 /* Responsive Design for phone screens */
 @media (max-width: 500px) {
@@ -190,11 +206,8 @@ h1 {
         font-size: 0.8rem;
     }
 
-    .hero-image {
-        width: 90%;
-    }
-
     .text-side h1 {
         font-size: 1.5rem;
     }
+    
 }
